# s3napshot

./: .gitignore  README.md  pyproject.toml
src/s3napshot/cli/: commands.py
src/s3napshot/models/: profile.py  snapshot.py
src/s3napshot/services/: archive.py  config.py  upload.py
tests/: README.md  credentials.example.py  test_archive.py  test_cli.py  test_config.py  test_integration.py
