[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3napshot"
version = "0.1.0"
description = "Snapshot local directories to S3-compatible object storage"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "boto3>=1.34",
    "cryptography>=42",
    "keyring>=25",
]

[project.scripts]
s3napshot = "s3napshot.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["src/s3napshot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "moto[s3]>=5",
    "boto3-stubs[s3]",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that hit real S3-compatible storage (deselect with '-m not integration')",
]
